--- a/assignment2/recipe-app/src/componentStyles/recipeCard.css
+++ b/assignment2/recipe-app/src/componentStyles/recipeCard.css
@@ -11,11 +11,12 @@
 
 .recipeImg{
     padding: 10px;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     border-radius: 25px;
     border: 2px solid grey;
+    height: 12rem;
     width: 100%;
     object-fit: cover;
 }
