popups open and close with terrible css

--- a/redo2/food-app/src/index.css
+++ b/redo2/food-app/src/index.css
@@ -3,6 +3,7 @@
 @import "./componentStyles/singleRecipe.css";
 @import "./componentStyles/recipeList.css";
 @import "./componentStyles/footer.css";
+@import "./componentStyles/popup.css";
 
 * {
   padding: 0;
