--- a/redo2/food-app/src/componentStyles/popup.css
+++ b/redo2/food-app/src/componentStyles/popup.css
@@ -4,23 +4,45 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: blue;
-
+    background-color: #eeeeee;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .popup-inner {
+    font-family: "Source Sans Pro", sans-serif;
     position: relative;
     padding: 32px;
     width: 100%;
     max-width: 640px;
-    background-color: yellow;
+    background-color: #F5BA13;
 }
 
-.popup-inner .closeButton{
+.popup-inner{
     position: absolute;
     top:16px;
     right:16px;
+}
+
+.closeButton {
+    position: relative;
+    background-color: #F5BA13;
+    border: 2px solid;
+    color: #ffffff;
+    padding: 15px 32px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "Source Sans Pro", sans-serif;
+    transition-duration: 0.4s;
+    border-radius: 25px;
+}
+
+.closeButton:hover {
+    background-color: #F5BA13;
+    color: #000;
 }
