--- a/redo2/food-app/src/componentStyles/recipeInputForm.css
+++ b/redo2/food-app/src/componentStyles/recipeInputForm.css
@@ -1,4 +1,5 @@
 .recipeForm {
+    margin-top: 30px;
     padding-top: 10px;
     font-family: 'Montserrat Bold', sans-serif;
     background-color: #eeeeee;
@@ -23,11 +24,11 @@
 }
 
 .left {
-    width: 25%;
+    width: 50%;
 }
 
 .right {
-    width: 75%;
+    width: 50%;
 }
 
 .column-left input, textarea {
