--- a/redo2/food-app/src/componentStyles/recipeList.css
+++ b/redo2/food-app/src/componentStyles/recipeList.css
@@ -1,5 +1,6 @@
 .recipeContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    grid-gap: 1.5em;
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
+    grid-gap:4rem;
+    justify-content: center;
 }
