--- a/food-app/src/componentStyles/header.css
+++ b/food-app/src/componentStyles/header.css
@@ -1,6 +1,6 @@
 /*Header component*/
 header {
-    background-color: #F5BA13;
+    background-color: green;
     margin: auto -16px;
     padding: 16px 32px;
     box-shadow:0 0 10px 0 rgba(0, 0, 0, 0.3);
